--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
 body{
   background:
-    url('Santa.png') left center / 50% 100vh no-repeat,
-    url('Santa.png') right center / 50% 100vh no-repeat;
+     url('Santa.png') left center / 50% 100vh no-repeat fixed,
+    url('Santa.png') right center / 50% 100vh no-repeat fixed;
 }
+
 @media (max-width:768px){
-  body{background:url('Santa.png') center center / cover no-repeat;}
+  body{
+    background:url('Santa.png') center center / cover no-repeat fixed;
+  }
 }
 
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
