--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ body{
     url('Santa.png') right center / 50% 100vh no-repeat fixed;
 }
 
-@media (max-width:768px){
-  body{
-    background:url('Santa.png') center center / cover no-repeat fixed;
+@media (max-width: 768px) {
+  body {
+    background-attachment: scroll;
   }
 }
 
