--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body{
 
 @media (max-width: 768px) {
   body {
-    background-attachment: scroll;
+    background: url('Santa.png') center center / cover no-repeat;
   }
 }
 
