--- a/index.html
+++ b/index.html
@@ -22,17 +22,12 @@
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
-body{
-  background:
-     url('Santa.png') left center / 50% 100vh no-repeat fixed,
-    url('Santa.png') right center / 50% 100vh no-repeat fixed;
-}
-
-@media (max-width: 768px) {
-  body {
-    background: url('Santa.png') center center / cover no-repeat;
-  }
+html, body {
+  margin:0;
+  padding:0;
+  height:100%;
+  font-family:Arial,sans-serif;
+  background: url('Santa.png') center center / cover no-repeat fixed;
 }
 
 #home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
@@ -52,19 +47,20 @@ body{
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%;padding:0 16px;}
+.search-box{max-width:580px;width:90%;padding:0 16px;margin-top:20px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;}
+.topbar{display:flex;gap:12px;align-items:center;margin-bottom:12px;}
 .back{cursor:pointer;font-size:22px;}
+#qTop{flex:1;padding:10px 14px;border-radius:20px;border:1px solid #dfe1e5;font-size:16px;}
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
+.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;overflow-x:auto;}
+.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;white-space:nowrap;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
 
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:12px;}
+.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;background:#fff;}
 
 .news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
 .news-card{
@@ -90,6 +86,11 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 .gsc-adBlock,
 .gcsc-find-more-on-google{
   display:none !important;
+}
+.gcse-searchresults-only {
+  width: 100% !important;
+  min-height: 500px;
+  display: block !important;
 }
 </style>
 </head>
@@ -201,12 +202,10 @@ function search(){
   if(tab==="news"){
     content.innerHTML=`
       <div class="news-col">
-
         <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
           <img src="https://google.com/favicon.ico" width="32" height="32">
           <div>
             <div style="font-size:18px;font-weight:600;">Google News</div>
-
           </div>
         </a>
 
@@ -214,10 +213,8 @@ function search(){
           <img src="https://bing.com/favicon.ico" width="32" height="32">
           <div>
             <div style="font-size:18px;font-weight:600;">Bing News</div>
-
           </div>
         </a>
-
       </div>
     `;
   }
