--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+
 <link rel="icon" type="image/png" href="favicon.png">
 <link rel="manifest" href="manifest.json">
 
@@ -21,30 +22,16 @@
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html, body { margin:0; padding:0; height:100%; font-family:Arial,sans-serif; overflow-x:hidden; }
-
-/* PC: two Santa images */
-#santa-left, #santa-right {
-  display:none;
-}
-@media(min-width:769px){
-  #santa-left, #santa-right{
-    display:block;
-    position:fixed;
-    top:0;
-    width:50vw;
-    height:100vh;
-    background:url('Santa.png') center/contain no-repeat;
-    z-index:-1;
-  }
-  #santa-left{left:0;}
-  #santa-right{right:0;}
+html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
+body{
+  background:
+     url('Santa.png') left center / 50% 100vh no-repeat fixed,
+    url('Santa.png') right center / 50% 100vh no-repeat fixed;
 }
 
-/* mobile background single Santa */
-@media(max-width:768px){
-  body{
-    background:url('Santa.png') center/center / cover no-repeat fixed;
+@media (max-width: 768px) {
+  body {
+    background: url('Santa.png') center center / cover no-repeat;
   }
 }
 
@@ -65,30 +52,32 @@ html, body { margin:0; padding:0; height:100%; font-family:Arial,sans-serif; ove
 .logo span:nth-child(8){color:#4285f4}
 .logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%;padding:0 16px;margin-top:20px;}
+.search-box{max-width:580px;width:90%;padding:0 16px;}
 input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
 
 #results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
-.topbar{display:flex;gap:12px;align-items:center;margin-bottom:12px;}
+.topbar{display:flex;gap:12px;align-items:center;}
 .back{cursor:pointer;font-size:22px;}
-#qTop{flex:1;padding:10px 14px;border-radius:20px;border:1px solid #dfe1e5;font-size:16px;}
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;overflow-x:auto;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;white-space:nowrap;}
+.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
+.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
 .tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
 
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:12px;}
-.grid .card, .news-col .news-card, .gcse-card{
-  background:#fff;
-  border-radius:8px;
-  padding:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-  text-decoration:none;
-  color:#000;
-}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;background:#fff;}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
+.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
 
 .news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
+.news-card{
+  display:flex;
+  align-items:center;
+  gap:14px;
+  padding:16px;
+  background:#fff;
+  border-radius:14px;
+  text-decoration:none;
+  color:#000;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+}
 
 .gsc-control-cse,
 .gsc-control-cse *{
@@ -102,21 +91,10 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 .gcsc-find-more-on-google{
   display:none !important;
 }
-.gcse-searchresults-only {
-  width:100% !important;
-  min-height:500px;
-  display:block !important;
-  background:#fff;
-  border-radius:8px;
-  padding:10px;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-}
 </style>
 </head>
 
 <body>
-<div id="santa-left"></div>
-<div id="santa-right"></div>
 
 <div id="home">
   <div class="logo">
@@ -171,17 +149,6 @@ function showResults(q){
   homeEl.style.display="none";
   resEl.style.display="block";
   qTop.value=q;
-
-  // Apply query to Google PSE manually for mobile
-  setTimeout(()=>{
-    const el=document.querySelector('.gcse-searchresults-only');
-    if(window.google && window.google.search && window.google.search.cse){
-      try{
-        window.google.search.cse.element.getElement('gsc-i-id1')?.execute(q);
-      }catch(e){}
-    }
-  },500);
-
   search();
 }
 
@@ -216,7 +183,7 @@ function search(){
     })
     .then(r=>r.json())
     .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<div class="card"><img src="${i.urls.regular}"></div>`).join("")}</div>`;
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
     });
   }
 
@@ -225,7 +192,7 @@ function search(){
       .then(r=>r.json())
       .then(d=>{
         content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a class="card" href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
+          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
             <img src="${v.snippet.thumbnails.high.url}">
           </a>`).join("")}</div>`;
       });
@@ -234,14 +201,23 @@ function search(){
   if(tab==="news"){
     content.innerHTML=`
       <div class="news-col">
+
         <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
           <img src="https://google.com/favicon.ico" width="32" height="32">
-          <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
+          <div>
+            <div style="font-size:18px;font-weight:600;">Google News</div>
+
+          </div>
         </a>
+
         <a class="news-card" href="https://www.bing.com/news/search?q=${enc}" target="_blank">
           <img src="https://bing.com/favicon.ico" width="32" height="32">
-          <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
+          <div>
+            <div style="font-size:18px;font-weight:600;">Bing News</div>
+
+          </div>
         </a>
+
       </div>
     `;
   }
