--- a/index.html
+++ b/index.html
@@ -2,78 +2,100 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link rel="icon" type="image/png" href="favicon.png">
+<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+
+<link rel="icon" href="favicon.png">
 <link rel="manifest" href="manifest.json">
 
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#1a73e8">
+
+<script>
+/* HARD REQUIRE GSC HASH BEFORE ANYTHING LOADS */
+(function(){
+  const p=new URLSearchParams(location.search);
+  const q=p.get("q");
+
+  if(q){
+    const needed="#gsc.tab=0&gsc.q="+encodeURIComponent(q)+"&gsc.page=1";
+    if(location.hash !== needed){
+      location.replace("?q="+encodeURIComponent(q)+needed);
+    }
+  }
+})();
+</script>
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;padding:0;height:100%;font-family:Arial,sans-serif;}
+html,body{margin:0;height:100%;font-family:Arial;}
+
 body{
-  background:
-     url('Santa.png') left center / 50% 100vh no-repeat fixed,
-    url('Santa.png') right center / 50% 100vh no-repeat fixed;
-}
-@media (max-width:768px){
-  body{background:url('Santa.png') center/cover no-repeat;}
+ background:
+ url('Santa.png') left/50% 100vh no-repeat fixed,
+ url('Santa.png') right/50% 100vh no-repeat fixed;
 }
 
-#home{min-height:100vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
+@media(max-width:768px){
+ body{background:url('Santa.png') center/cover no-repeat;}
+}
+
+#home{
+ min-height:100vh;
+ display:flex;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+}
 
 .logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-  display:inline-flex;
+ font-size:clamp(48px,10vw,80px);
+ font-weight:bold;
 }
-.logo span:nth-child(1){color:#4285f4}
-.logo span:nth-child(2){color:#ff9800}
-.logo span:nth-child(3){color:#fbbc05}
-.logo span:nth-child(4){color:#4285f4}
-.logo span:nth-child(5){color:#34a853}
-.logo span:nth-child(6){color:#ff9800}
-.logo span:nth-child(7){color:#fbbc05}
-.logo span:nth-child(8){color:#4285f4}
-.logo span:nth-child(9){color:#34a853}
 
-.search-box{max-width:580px;width:90%;padding:0 16px;}
-input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px solid #dfe1e5;}
+.search-box{width:90%;max-width:580px}
+input{
+ width:100%;
+ padding:14px 20px;
+ font-size:18px;
+ border-radius:24px;
+ border:1px solid #ddd;
+}
 
-#results{display:none;max-width:1400px;margin:auto;padding:15px;min-height:100vh;}
+#results{display:none;padding:15px;}
 
-.topbar{display:flex;gap:12px;align-items:center;}
-.back{cursor:pointer;font-size:22px;}
+.tabs{
+ display:flex;
+ gap:18px;
+ margin:15px 0;
+ border-bottom:1px solid #ddd;
+}
+.tab{cursor:pointer;padding-bottom:8px;color:#666}
+.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8}
 
-.tabs{display:flex;gap:18px;margin:15px 0;border-bottom:1px solid #ddd;}
-.tab{cursor:pointer;color:#5f6368;padding-bottom:8px;}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8;}
-
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:12px;}
-.grid img{width:100%;aspect-ratio:16/9;object-fit:cover;border-radius:8px;}
+.grid{
+ display:grid;
+ grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+ gap:12px;
+}
+.grid img{
+ width:100%;
+ aspect-ratio:16/9;
+ object-fit:cover;
+ border-radius:8px;
+}
 
 .news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
 .news-card{
-  display:flex;
-  align-items:center;
-  gap:14px;
-  padding:16px;
-  background:#fff;
-  border-radius:14px;
-  text-decoration:none;
-  color:#000;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-}
-
-/* Hidden PSE container (always loads) */
-#pse-hidden{
-  position:absolute;
-  width:1px;
-  height:1px;
-  overflow:hidden;
-  opacity:0;
+ display:flex;
+ align-items:center;
+ gap:14px;
+ padding:16px;
+ background:#fff;
+ border-radius:14px;
+ text-decoration:none;
+ color:#000;
+ box-shadow:0 2px 6px rgba(0,0,0,.08);
 }
 </style>
 </head>
@@ -81,35 +103,27 @@ input{width:100%;padding:14px 20px;font-size:18px;border-radius:24px;border:1px 
 <body>
 
 <div id="home">
-  <div class="logo">
-    <span>S</span><span>e</span><span>a</span><span>r</span><span>c</span>
-    <span>h</span><span>m</span><span>a</span><span>s</span>
-  </div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+ <div class="logo">Searchmas</div>
+ <form class="search-box" onsubmit="startSearch(event)">
+   <input id="qHome" placeholder="Search the web">
+ </form>
 </div>
 
 <div id="results">
-  <div class="topbar">
-    <div class="back" onclick="goHome()">⬅</div>
-    <input id="qTop">
-  </div>
 
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
+ <div class="tabs">
+  <div class="tab active" data-tab="all">All</div>
+  <div class="tab" data-tab="images">Images</div>
+  <div class="tab" data-tab="videos">Videos</div>
+  <div class="tab" data-tab="news">News</div>
+ </div>
 
-  <!-- Visible content -->
-  <div id="content"></div>
+ <div id="pse">
+   <div class="gcse-searchresults-only"></div>
+ </div>
 
-  <!-- Hidden always-loaded PSE -->
-  <div id="pse-hidden">
-    <div class="gcse-searchresults-only"></div>
-  </div>
+ <div id="content"></div>
+
 </div>
 
 <script>
@@ -118,113 +132,86 @@ const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
 
 let tab="all";
 
-const homeEl=document.getElementById("home");
-const resEl=document.getElementById("results");
-const qHome=document.getElementById("qHome");
-const qTop=document.getElementById("qTop");
+const home=document.getElementById("home");
+const results=document.getElementById("results");
 const content=document.getElementById("content");
-
-function gscHash(q){
-  return "#gsc.tab=0&gsc.q="+encodeURIComponent(q)+"&gsc.page=1";
-}
+const pse=document.getElementById("pse");
 
 const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
 
 if(startQ){
-  if(!location.hash){
-    history.replaceState({}, "", "?q="+encodeURIComponent(startQ)+gscHash(startQ));
-  }
-  showResults(startQ,false);
+ home.style.display="none";
+ results.style.display="block";
 }
 
 function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
-  if(!q) return;
+ e.preventDefault();
+ const q=qHome.value.trim();
+ if(!q) return;
 
-  history.pushState({}, "", "?q="+encodeURIComponent(q)+gscHash(q));
-  showResults(q,true);
-}
-
-function showResults(q,runSearch=true){
-  homeEl.style.display="none";
-  resEl.style.display="block";
-  qTop.value=q;
-  if(runSearch) search();
-}
-
-function goHome(){
-  history.replaceState({}, "", location.pathname);
-  resEl.style.display="none";
-  homeEl.style.display="flex";
+ location.href="?q="+encodeURIComponent(q)+"#gsc.tab=0&gsc.q="+encodeURIComponent(q)+"&gsc.page=1";
 }
 
 document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    search();
-  };
+ t.onclick=()=>{
+  tab=t.dataset.tab;
+  document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+  t.classList.add("active");
+  loadTab();
+ };
 });
 
-function ensurePSELoaded(q){
-  if(!location.hash){
-    history.replaceState({}, "", "?q="+encodeURIComponent(q)+gscHash(q));
-  }
-}
+function loadTab(){
+ const q=new URLSearchParams(location.search).get("q");
+ if(!q) return;
 
-function search(){
-  const q=qTop.value.trim();
-  if(!q) return;
+ if(tab==="all"){
+  pse.style.display="block";
+  content.innerHTML="";
+  return;
+ }
 
-  const enc=encodeURIComponent(q);
+ pse.style.display="none";
 
-  /* ALWAYS ensure PSE loads */
-  ensurePSELoaded(q);
+ const enc=encodeURIComponent(q);
 
-  if(tab==="all"){
-    content.innerHTML=`<div class="gcse-searchresults-only"></div>`;
-    return;
-  }
+ if(tab==="images"){
+  fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+   headers:{Authorization:"Client-ID "+UNSPLASH}
+  })
+  .then(r=>r.json())
+  .then(d=>{
+   content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+  });
+ }
 
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-  }
+ if(tab==="videos"){
+  fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
+  .then(r=>r.json())
+  .then(d=>{
+   content.innerHTML=`<div class="grid">${d.items.map(v=>`
+    <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
+     <img src="${v.snippet.thumbnails.high.url}">
+    </a>`).join("")}</div>`;
+  });
+ }
 
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-      .then(r=>r.json())
-      .then(d=>{
-        content.innerHTML=`<div class="grid">${d.items.map(v=>`
-          <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-            <img src="${v.snippet.thumbnails.high.url}">
-          </a>`).join("")}</div>`;
-      });
-  }
+ if(tab==="news"){
+  content.innerHTML=`
+   <div class="news-col">
+    <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
+     <img src="https://google.com/favicon.ico" width="32">
+     <div><b>Google News</b></div>
+    </a>
 
-  if(tab==="news"){
-    content.innerHTML=`
-      <div class="news-col">
-        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
-          <img src="https://google.com/favicon.ico" width="32">
-          <div><div style="font-size:18px;font-weight:600;">Google News</div></div>
-        </a>
-
-        <a class="news-card" href="https://bing.com/news/search?q=${enc}" target="_blank">
-          <img src="https://bing.com/favicon.ico" width="32">
-          <div><div style="font-size:18px;font-weight:600;">Bing News</div></div>
-        </a>
-      </div>
-    `;
-  }
+    <a class="news-card" href="https://bing.com/news/search?q=${enc}" target="_blank">
+     <img src="https://bing.com/favicon.ico" width="32">
+     <div><b>Bing News</b></div>
+    </a>
+   </div>
+  `;
+ }
 }
 </script>
 
