--- a/index.html
+++ b/index.html
@@ -4,80 +4,114 @@
 <meta charset="UTF-8">
 
 <link rel="icon" href="favicon.png">
+<link rel="manifest" href="manifest.json">
+
 <title>Searchmas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
 
 <style>
-html,body{margin:0;height:100%;font-family:Arial;}
+html,body{margin:0;height:100%;font-family:Arial,sans-serif;}
 
 body{
- background:
- url('Santa.png') left/50% 100vh no-repeat fixed,
- url('Santa.png') right/50% 100vh no-repeat fixed;
+  background:
+    url('Santa.png') left center / 50% 100vh no-repeat fixed,
+    url('Santa.png') right center / 50% 100vh no-repeat fixed;
 }
 
 @media(max-width:768px){
- body{background:url('Santa.png') center/cover no-repeat;}
+  body{background:url('Santa.png') center/cover no-repeat;}
 }
 
+/* HOME */
 #home{
- min-height:100vh;
- display:flex;
- flex-direction:column;
- justify-content:center;
- align-items:center;
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
 }
 
 .logo{
- font-size:clamp(48px,10vw,80px);
- font-weight:bold;
+  font-size:clamp(48px,10vw,80px);
+  font-weight:bold;
 }
 
 .search-box{width:90%;max-width:580px}
+
 input{
- width:100%;
- padding:14px 20px;
- font-size:18px;
- border-radius:24px;
- border:1px solid #ddd;
+  width:100%;
+  padding:14px 20px;
+  font-size:18px;
+  border-radius:24px;
+  border:1px solid #ddd;
 }
 
+/* RESULTS */
 #results{display:none;padding:15px;}
 
 .tabs{
- display:flex;
- gap:18px;
- margin:15px 0;
- border-bottom:1px solid #ddd;
+  display:flex;
+  gap:18px;
+  margin:15px 0;
+  border-bottom:1px solid #ddd;
 }
-.tab{cursor:pointer;padding-bottom:8px;color:#666}
-.tab.active{color:#1a73e8;border-bottom:3px solid #1a73e8}
 
+.tab{
+  cursor:pointer;
+  padding-bottom:8px;
+  color:#666;
+}
+
+.tab.active{
+  color:#1a73e8;
+  border-bottom:3px solid #1a73e8;
+}
+
+/* GRID */
 .grid{
- display:grid;
- grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
- gap:12px;
-}
-.grid img{
- width:100%;
- aspect-ratio:16/9;
- object-fit:cover;
- border-radius:8px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:12px;
 }
 
+.grid img{
+  width:100%;
+  aspect-ratio:16/9;
+  object-fit:cover;
+  border-radius:8px;
+}
+
+/* NEWS */
 .news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
+
 .news-card{
- display:flex;
- align-items:center;
- gap:14px;
- padding:16px;
- background:#fff;
- border-radius:14px;
- text-decoration:none;
- color:#000;
- box-shadow:0 2px 6px rgba(0,0,0,.08);
+  display:flex;
+  align-items:center;
+  gap:14px;
+  padding:16px;
+  background:#ffffffdd;
+  backdrop-filter:blur(6px);
+  border-radius:14px;
+  text-decoration:none;
+  color:#000;
+  box-shadow:0 2px 6px rgba(0,0,0,.08);
+}
+
+/* GOOGLE PSE TRANSPARENT */
+.gsc-control-cse,
+.gsc-control-cse *{
+  background:transparent !important;
+  border:none !important;
+  box-shadow:none !important;
+}
+
+.gsc-above-wrapper-area,
+.gsc-tabsArea,
+.gsc-adBlock,
+.gcsc-find-more-on-google{
+  display:none !important;
 }
 </style>
 </head>
@@ -85,26 +119,26 @@ input{
 <body>
 
 <div id="home">
- <div class="logo">Searchmas</div>
- <form class="search-box" onsubmit="startSearch(event)">
-   <input id="qHome" placeholder="Search the web">
- </form>
+  <div class="logo">Searchmas</div>
+  <form class="search-box" onsubmit="startSearch(event)">
+    <input id="qHome" placeholder="Search the web">
+  </form>
 </div>
 
 <div id="results">
 
- <div class="tabs">
-  <div class="tab active" data-tab="all">All</div>
-  <div class="tab" data-tab="images">Images</div>
-  <div class="tab" data-tab="videos">Videos</div>
-  <div class="tab" data-tab="news">News</div>
- </div>
+  <div class="tabs">
+    <div class="tab active" data-tab="all">All</div>
+    <div class="tab" data-tab="images">Images</div>
+    <div class="tab" data-tab="videos">Videos</div>
+    <div class="tab" data-tab="news">News</div>
+  </div>
 
- <div id="pse">
-   <div class="gcse-searchresults-only"></div>
- </div>
+  <div id="pse">
+    <div class="gcse-searchresults-only"></div>
+  </div>
 
- <div id="content"></div>
+  <div id="content"></div>
 
 </div>
 
@@ -123,93 +157,98 @@ const params=new URLSearchParams(location.search);
 const startQ=params.get("q");
 
 if(startQ){
- home.style.display="none";
- results.style.display="block";
- autoRunPSE(startQ);
+  showResults(startQ);
+  autoRunPSE(startQ);
 }
 
 function startSearch(e){
- e.preventDefault();
- const q=qHome.value.trim();
- if(!q) return;
+  e.preventDefault();
+  const q=qHome.value.trim();
+  if(!q) return;
 
- history.pushState({}, "", "?q="+encodeURIComponent(q));
- home.style.display="none";
- results.style.display="block";
- autoRunPSE(q);
+  history.pushState({}, "", "?q="+encodeURIComponent(q));
+  showResults(q);
+  autoRunPSE(q);
 }
 
+function showResults(q){
+  home.style.display="none";
+  results.style.display="block";
+}
+
+/* REAL PSE AUTO EXECUTE */
 function autoRunPSE(q){
- const wait=setInterval(()=>{
-  if(window.google && google.search){
-   try{
-    google.search.cse.element.getElement().execute(q);
-    clearInterval(wait);
-   }catch(e){}
-  }
- },200);
+  const wait=setInterval(()=>{
+    if(window.google && google.search && google.search.cse){
+      try{
+        google.search.cse.element.getElement().execute(q);
+        clearInterval(wait);
+      }catch(e){}
+    }
+  },200);
 }
 
+/* TABS */
 document.querySelectorAll(".tab").forEach(t=>{
- t.onclick=()=>{
-  tab=t.dataset.tab;
-  document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-  t.classList.add("active");
-  loadTab();
- };
+  t.onclick=()=>{
+    tab=t.dataset.tab;
+    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
+    t.classList.add("active");
+    loadTab();
+  };
 });
 
 function loadTab(){
- const q=new URLSearchParams(location.search).get("q");
- if(!q) return;
+  const q=new URLSearchParams(location.search).get("q");
+  if(!q) return;
 
- if(tab==="all"){
-  pse.style.display="block";
-  content.innerHTML="";
-  autoRunPSE(q);
-  return;
- }
+  if(tab==="all"){
+    pse.style.display="block";
+    content.innerHTML="";
+    autoRunPSE(q);
+    return;
+  }
 
- pse.style.display="none";
+  pse.style.display="none";
 
- const enc=encodeURIComponent(q);
+  const enc=encodeURIComponent(q);
 
- if(tab==="images"){
-  fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-   headers:{Authorization:"Client-ID "+UNSPLASH}
-  })
-  .then(r=>r.json())
-  .then(d=>{
-   content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-  });
- }
+  if(tab==="images"){
+    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
+      headers:{Authorization:"Client-ID "+UNSPLASH}
+    })
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
+    });
+  }
 
- if(tab==="videos"){
-  fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-  .then(r=>r.json())
-  .then(d=>{
-   content.innerHTML=`<div class="grid">${d.items.map(v=>`
-    <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-     <img src="${v.snippet.thumbnails.high.url}">
-    </a>`).join("")}</div>`;
-  });
- }
+  if(tab==="videos"){
+    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
+    .then(r=>r.json())
+    .then(d=>{
+      content.innerHTML=`<div class="grid">${d.items.map(v=>`
+        <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
+          <img src="${v.snippet.thumbnails.high.url}">
+        </a>`).join("")}</div>`;
+    });
+  }
 
- if(tab==="news"){
-  content.innerHTML=`
-   <div class="news-col">
-    <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
-     <img src="https://google.com/favicon.ico" width="32">
-     <div><b>Google News</b></div>
-    </a>
+  if(tab==="news"){
+    content.innerHTML=`
+      <div class="news-col">
+        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
+          <img src="https://google.com/favicon.ico" width="32">
+          <div><b>Google News</b></div>
+        </a>
 
-    <a class="news-card" href="https://bing.com/news/search?q=${enc}" target="_blank">
-     <img src="https://bing.com/favicon.ico" width="32">
-     <div><b>Bing News</b></div>
-    </a>
-   </div>
-  `;
- }
+        <a class="news-card" href="https://bing.com/news/search?q=${enc}" target="_blank">
+          <img src="https://bing.com/favicon.ico" width="32">
+          <div><b>Bing News</b></div>
+        </a>
+      </div>
+    `;
+  }
 }
 </script>
 
