--- a/index.html
+++ b/index.html
@@ -1,105 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-
-<link rel="icon" href="favicon.png">
-<link rel="manifest" href="manifest.json">
-
 <title>Searchmas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script async src="https://cse.google.com/cse.js?cx=949e339dabb3b4e60"></script>
+<!-- Google PSE -->
+<script async src="https://cse.google.com/cse.js?cx=YOUR_PSE_ID"></script>
 
 <style>
-html,body{margin:0;height:100%;font-family:Arial,sans-serif;}
-
 body{
-  background:
-    url('Santa.png') left center / 50% 100vh no-repeat fixed,
-    url('Santa.png') right center / 50% 100vh no-repeat fixed;
+  margin:0;
+  font-family:Arial, sans-serif;
+  background:#0b0b0b;
+  color:white;
 }
 
-@media(max-width:768px){
-  body{background:url('Santa.png') center/cover no-repeat;}
-}
-
-/* HOME */
-#home{
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-}
-
-.logo{
-  font-size:clamp(48px,10vw,80px);
-  font-weight:bold;
-}
-
-.search-box{width:90%;max-width:580px}
-
-input{
+/* Top Search Bar */
+.search-bar{
   width:100%;
-  padding:14px 20px;
-  font-size:18px;
-  border-radius:24px;
-  border:1px solid #ddd;
+  max-width:700px;
+  margin:40px auto 20px;
+  display:flex;
+  gap:10px;
 }
 
-/* RESULTS */
-#results{display:none;padding:15px;}
+.search-bar input{
+  flex:1;
+  padding:14px;
+  border-radius:12px;
+  border:none;
+  font-size:16px;
+}
 
+.search-bar button{
+  padding:14px 22px;
+  border:none;
+  border-radius:12px;
+  background:#ff3b3b;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+}
+
+/* Tabs */
 .tabs{
   display:flex;
-  gap:18px;
-  margin:15px 0;
-  border-bottom:1px solid #ddd;
+  justify-content:center;
+  gap:25px;
+  margin-bottom:20px;
 }
 
-.tab{
+.tabs button{
+  background:none;
+  border:none;
+  color:white;
+  font-size:16px;
   cursor:pointer;
-  padding-bottom:8px;
-  color:#666;
+  opacity:0.7;
 }
 
-.tab.active{
-  color:#1a73e8;
-  border-bottom:3px solid #1a73e8;
+.tabs button.active{
+  opacity:1;
+  border-bottom:2px solid red;
 }
 
-/* GRID */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
-  gap:12px;
+/* Results Area */
+#results{
+  width:90%;
+  max-width:900px;
+  margin:auto;
 }
 
-.grid img{
-  width:100%;
-  aspect-ratio:16/9;
-  object-fit:cover;
-  border-radius:8px;
-}
-
-/* NEWS */
-.news-col{display:flex;flex-direction:column;gap:16px;max-width:700px;}
-
-.news-card{
-  display:flex;
-  align-items:center;
-  gap:14px;
-  padding:16px;
-  background:#ffffffdd;
-  backdrop-filter:blur(6px);
-  border-radius:14px;
-  text-decoration:none;
-  color:#000;
-  box-shadow:0 2px 6px rgba(0,0,0,.08);
-}
-
-/* GOOGLE PSE TRANSPARENT */
+/* Transparent Google PSE */
 .gsc-control-cse,
 .gsc-control-cse *{
   background:transparent !important;
@@ -107,6 +79,7 @@ input{
   box-shadow:none !important;
 }
 
+/* Hide extra Google UI */
 .gsc-above-wrapper-area,
 .gsc-tabsArea,
 .gsc-adBlock,
@@ -118,138 +91,79 @@ input{
 
 <body>
 
-<div id="home">
-  <div class="logo">Searchmas</div>
-  <form class="search-box" onsubmit="startSearch(event)">
-    <input id="qHome" placeholder="Search the web">
-  </form>
+<!-- Search Box -->
+<div class="search-bar">
+  <input id="searchInput" placeholder="Search Searchmas...">
+  <button onclick="doSearch()">Search</button>
 </div>
 
+<!-- Tabs -->
+<div class="tabs">
+  <button id="tabAll" class="active" onclick="switchTab('all')">All</button>
+  <button onclick="switchTab('images')">Images</button>
+  <button onclick="switchTab('news')">News</button>
+</div>
+
+<!-- Results -->
 <div id="results">
-
-  <div class="tabs">
-    <div class="tab active" data-tab="all">All</div>
-    <div class="tab" data-tab="images">Images</div>
-    <div class="tab" data-tab="videos">Videos</div>
-    <div class="tab" data-tab="news">News</div>
-  </div>
-
-  <div id="pse">
-    <div class="gcse-searchresults-only"></div>
-  </div>
-
-  <div id="content"></div>
-
+  <div class="gcse-searchresults-only"></div>
 </div>
 
 <script>
-const UNSPLASH="1IF0KThuYgH722kFgZ5TaZ1tyckTiMUri6DxUSeZ-fk";
-const YT="AIzaSyBKN7qNWVOSjIf040epQA579G29IzPxqpI";
+let currentTab = "all";
 
-let tab="all";
+function switchTab(tab){
+  currentTab = tab;
 
-const home=document.getElementById("home");
-const results=document.getElementById("results");
-const content=document.getElementById("content");
-const pse=document.getElementById("pse");
+  document.querySelectorAll(".tabs button").forEach(b=>b.classList.remove("active"));
+  if(tab==="all") document.getElementById("tabAll").classList.add("active");
 
-const params=new URLSearchParams(location.search);
-const startQ=params.get("q");
-
-if(startQ){
-  showResults(startQ);
-  autoRunPSE(startQ);
+  if(tab==="all"){
+    autoLoadPSE(getQueryFromHash());
+  }else{
+    document.querySelector(".gcse-searchresults-only").innerHTML =
+      "<p style='opacity:.6;text-align:center'>No PSE for this tab</p>";
+  }
 }
 
-function startSearch(e){
-  e.preventDefault();
-  const q=qHome.value.trim();
+function doSearch(){
+  const q = document.getElementById("searchInput").value.trim();
   if(!q) return;
 
-  history.pushState({}, "", "?q="+encodeURIComponent(q));
-  showResults(q);
-  autoRunPSE(q);
+  // REAL PSE trigger hash (not decorative)
+  location.hash = "#gsc.tab=0&gsc.q=" + encodeURIComponent(q) + "&gsc.page=1";
+
+  autoLoadPSE(q);
 }
 
-function showResults(q){
-  home.style.display="none";
-  results.style.display="block";
+function getQueryFromHash(){
+  const params = new URLSearchParams(location.hash.replace("#",""));
+  return params.get("gsc.q") || "";
 }
 
-/* REAL PSE AUTO EXECUTE */
-function autoRunPSE(q){
-  const wait=setInterval(()=>{
+function autoLoadPSE(query){
+  if(!query) return;
+
+  const wait = setInterval(()=>{
     if(window.google && google.search && google.search.cse){
-      try{
-        google.search.cse.element.getElement().execute(q);
+      const el = document.querySelector(".gsc-input");
+      if(el){
+        el.value = query;
+        google.search.cse.element.getElement().execute(query);
         clearInterval(wait);
-      }catch(e){}
+      }
     }
   },200);
 }
 
-/* TABS */
-document.querySelectorAll(".tab").forEach(t=>{
-  t.onclick=()=>{
-    tab=t.dataset.tab;
-    document.querySelectorAll(".tab").forEach(x=>x.classList.remove("active"));
-    t.classList.add("active");
-    loadTab();
-  };
+/* Auto load on page open */
+window.addEventListener("load", ()=>{
+  const q = getQueryFromHash();
+  if(q){
+    document.getElementById("searchInput").value = q;
+    autoLoadPSE(q);
+  }
 });
-
-function loadTab(){
-  const q=new URLSearchParams(location.search).get("q");
-  if(!q) return;
-
-  if(tab==="all"){
-    pse.style.display="block";
-    content.innerHTML="";
-    autoRunPSE(q);
-    return;
-  }
-
-  pse.style.display="none";
-
-  const enc=encodeURIComponent(q);
-
-  if(tab==="images"){
-    fetch(`https://api.unsplash.com/search/photos?query=${enc}&per_page=18`,{
-      headers:{Authorization:"Client-ID "+UNSPLASH}
-    })
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.results.map(i=>`<img src="${i.urls.regular}">`).join("")}</div>`;
-    });
-  }
-
-  if(tab==="videos"){
-    fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=12&q=${enc}&key=${YT}`)
-    .then(r=>r.json())
-    .then(d=>{
-      content.innerHTML=`<div class="grid">${d.items.map(v=>`
-        <a href="https://youtube.com/watch?v=${v.id.videoId}" target="_blank">
-          <img src="${v.snippet.thumbnails.high.url}">
-        </a>`).join("")}</div>`;
-    });
-  }
-
-  if(tab==="news"){
-    content.innerHTML=`
-      <div class="news-col">
-        <a class="news-card" href="https://google.com/search?q=${enc}" target="_blank">
-          <img src="https://google.com/favicon.ico" width="32">
-          <div><b>Google News</b></div>
-        </a>
-
-        <a class="news-card" href="https://bing.com/news/search?q=${enc}" target="_blank">
-          <img src="https://bing.com/favicon.ico" width="32">
-          <div><b>Bing News</b></div>
-        </a>
-      </div>
-    `;
-  }
-}
 </script>
 
 </body>
